[package]
name = "feature-flags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-client-ip = { workspace = true }
envconfig = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
base64 = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
governor = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
rdkafka = { workspace = true }
redis = { version = "0.23.3", features = [
    "tokio-comp",
    "cluster",
    "cluster-async",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
